parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABRE_CHAVES
    COMENTARIO
    FECHA_CHAVES
    NOTACAO_CIENTIFICA
    PRINCIPAL

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_declaracoes
Rule 2     lista_declaracoes -> lista_declaracoes declaracao
Rule 3     lista_declaracoes -> declaracao
Rule 4     declaracao -> declaracao_variaveis
Rule 5     declaracao -> inicializacao_variaveis
Rule 6     declaracao -> declaracao_funcao
Rule 7     declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis
Rule 8     inicializacao_variaveis -> atribuicao
Rule 9     lista_variaveis -> var VIRGULA lista_variaveis
Rule 10    lista_variaveis -> var
Rule 11    var -> IDENTIFICADOR
Rule 12    var -> IDENTIFICADOR indice
Rule 13    indice -> indice ABRE_COL expressao FECHA_COL
Rule 14    indice -> ABRE_COL expressao FECHA_COL
Rule 15    tipo -> INTEIRO
Rule 16    tipo -> FLUTUANTE
Rule 17    declaracao_funcao -> tipo cabecalho
Rule 18    declaracao_funcao -> cabecalho
Rule 19    cabecalho -> IDENTIFICADOR ABRE_PAR lista_parametros FECHA_PAR corpo FIM
Rule 20    lista_parametros -> lista_parametros VIRGULA lista_parametros
Rule 21    lista_parametros -> parametro
Rule 22    lista_parametros -> vazio
Rule 23    parametro -> tipo DOIS_PONTOS IDENTIFICADOR
Rule 24    parametro -> parametro ABRE_COL FECHA_COL
Rule 25    corpo -> corpo acao
Rule 26    corpo -> vazio
Rule 27    acao -> expressao
Rule 28    acao -> declaracao_variaveis
Rule 29    acao -> se
Rule 30    acao -> repita
Rule 31    acao -> leia
Rule 32    acao -> escreva
Rule 33    acao -> retorna
Rule 34    acao -> error
Rule 35    se -> SE expressao ENTAO corpo FIM
Rule 36    se -> SE expressao ENTAO corpo SENAO corpo FIM
Rule 37    repita -> REPITA corpo ATE expressao
Rule 38    atribuicao -> var ATRIBUICAO expressao
Rule 39    leia -> LEIA ABRE_PAR IDENTIFICADOR FECHA_PAR
Rule 40    escreva -> ESCREVA ABRE_PAR expressao FECHA_PAR
Rule 41    retorna -> RETORNA ABRE_PAR expressao FECHA_PAR
Rule 42    expressao -> expressao_simples
Rule 43    expressao -> atribuicao
Rule 44    expressao_simples -> expressao_aditiva
Rule 45    expressao_simples -> expressao_simples operador_relacional expressao_aditiva
Rule 46    expressao_aditiva -> expressao_multiplicativa
Rule 47    expressao_aditiva -> expressao_aditiva operador_multiplicacao expressao_unaria
Rule 48    expressao_multiplicativa -> expressao_unaria
Rule 49    expressao_multiplicativa -> expressao_multiplicativa operador_multiplicacao expressao_unaria
Rule 50    expressao_unaria -> fator
Rule 51    expressao_unaria -> operador_soma fator
Rule 52    operador_relacional -> MENOR
Rule 53    operador_relacional -> MAIOR
Rule 54    operador_relacional -> IGUALDADE
Rule 55    operador_relacional -> MENOR_IGUAL
Rule 56    operador_relacional -> MAIOR_IGUAL
Rule 57    operador_relacional -> NEGACAO
Rule 58    operador_soma -> SOMA
Rule 59    operador_soma -> SUBTRACAO
Rule 60    operador_multiplicacao -> MULTIPLICACAO
Rule 61    operador_multiplicacao -> DIVISAO
Rule 62    fator -> ABRE_COL expressao FECHA_COL
Rule 63    fator -> var
Rule 64    fator -> chamada_funcao
Rule 65    fator -> numero
Rule 66    numero -> INTEIRO
Rule 67    numero -> FLUTUANTE
Rule 68    chamada_funcao -> IDENTIFICADOR ABRE_PAR lista_argumentos FECHA_PAR
Rule 69    lista_argumentos -> lista_argumentos VIRGULA expressao
Rule 70    lista_argumentos -> expressao
Rule 71    lista_argumentos -> vazio
Rule 72    vazio -> <empty>

Terminals, with rules where they appear

ABRE_CHAVES          : 
ABRE_COL             : 13 14 24 62
ABRE_PAR             : 19 39 40 41 68
ATE                  : 37
ATRIBUICAO           : 38
COMENTARIO           : 
DIVISAO              : 61
DOIS_PONTOS          : 7 23
ENTAO                : 35 36
ESCREVA              : 40
FECHA_CHAVES         : 
FECHA_COL            : 13 14 24 62
FECHA_PAR            : 19 39 40 41 68
FIM                  : 19 35 36
FLUTUANTE            : 16 67
IDENTIFICADOR        : 11 12 19 23 39 68
IGUALDADE            : 54
INTEIRO              : 15 66
LEIA                 : 39
MAIOR                : 53
MAIOR_IGUAL          : 56
MENOR                : 52
MENOR_IGUAL          : 55
MULTIPLICACAO        : 60
NEGACAO              : 57
NOTACAO_CIENTIFICA   : 
PRINCIPAL            : 
REPITA               : 37
RETORNA              : 41
SE                   : 35 36
SENAO                : 36
SOMA                 : 58
SUBTRACAO            : 59
VIRGULA              : 9 20 69
error                : 34

Nonterminals, with rules where they appear

acao                 : 25
atribuicao           : 8 43
cabecalho            : 17 18
chamada_funcao       : 64
corpo                : 19 25 35 36 36 37
declaracao           : 2 3
declaracao_funcao    : 6
declaracao_variaveis : 4 28
escreva              : 32
expressao            : 13 14 27 35 36 37 38 40 41 62 69 70
expressao_aditiva    : 44 45 47
expressao_multiplicativa : 46 49
expressao_simples    : 42 45
expressao_unaria     : 47 48 49
fator                : 50 51
indice               : 12 13
inicializacao_variaveis : 5
leia                 : 31
lista_argumentos     : 68 69
lista_declaracoes    : 1 2
lista_parametros     : 19 20 20
lista_variaveis      : 7 9
numero               : 65
operador_multiplicacao : 47 49
operador_relacional  : 45
operador_soma        : 51
parametro            : 21 24
programa             : 0
repita               : 30
retorna              : 33
se                   : 29
tipo                 : 7 17 23
var                  : 9 10 38 63
vazio                : 22 26 71

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_declaracoes
    (2) lista_declaracoes -> . lista_declaracoes declaracao
    (3) lista_declaracoes -> . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . IDENTIFICADOR ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice

    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    IDENTIFICADOR   shift and go to state 13

    programa                       shift and go to state 1
    lista_declaracoes              shift and go to state 2
    declaracao                     shift and go to state 3
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_declaracoes .
    (2) lista_declaracoes -> lista_declaracoes . declaracao
    (4) declaracao -> . declaracao_variaveis
    (5) declaracao -> . inicializacao_variaveis
    (6) declaracao -> . declaracao_funcao
    (7) declaracao_variaveis -> . tipo DOIS_PONTOS lista_variaveis
    (8) inicializacao_variaveis -> . atribuicao
    (17) declaracao_funcao -> . tipo cabecalho
    (18) declaracao_funcao -> . cabecalho
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE
    (38) atribuicao -> . var ATRIBUICAO expressao
    (19) cabecalho -> . IDENTIFICADOR ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice

    $end            reduce using rule 1 (programa -> lista_declaracoes .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11
    IDENTIFICADOR   shift and go to state 13

    declaracao                     shift and go to state 14
    declaracao_variaveis           shift and go to state 4
    inicializacao_variaveis        shift and go to state 5
    declaracao_funcao              shift and go to state 6
    tipo                           shift and go to state 7
    atribuicao                     shift and go to state 8
    cabecalho                      shift and go to state 9
    var                            shift and go to state 12

state 3

    (3) lista_declaracoes -> declaracao .

    INTEIRO         reduce using rule 3 (lista_declaracoes -> declaracao .)
    FLUTUANTE       reduce using rule 3 (lista_declaracoes -> declaracao .)
    IDENTIFICADOR   reduce using rule 3 (lista_declaracoes -> declaracao .)
    $end            reduce using rule 3 (lista_declaracoes -> declaracao .)


state 4

    (4) declaracao -> declaracao_variaveis .

    INTEIRO         reduce using rule 4 (declaracao -> declaracao_variaveis .)
    FLUTUANTE       reduce using rule 4 (declaracao -> declaracao_variaveis .)
    IDENTIFICADOR   reduce using rule 4 (declaracao -> declaracao_variaveis .)
    $end            reduce using rule 4 (declaracao -> declaracao_variaveis .)


state 5

    (5) declaracao -> inicializacao_variaveis .

    INTEIRO         reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    FLUTUANTE       reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    IDENTIFICADOR   reduce using rule 5 (declaracao -> inicializacao_variaveis .)
    $end            reduce using rule 5 (declaracao -> inicializacao_variaveis .)


state 6

    (6) declaracao -> declaracao_funcao .

    INTEIRO         reduce using rule 6 (declaracao -> declaracao_funcao .)
    FLUTUANTE       reduce using rule 6 (declaracao -> declaracao_funcao .)
    IDENTIFICADOR   reduce using rule 6 (declaracao -> declaracao_funcao .)
    $end            reduce using rule 6 (declaracao -> declaracao_funcao .)


state 7

    (7) declaracao_variaveis -> tipo . DOIS_PONTOS lista_variaveis
    (17) declaracao_funcao -> tipo . cabecalho
    (19) cabecalho -> . IDENTIFICADOR ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    DOIS_PONTOS     shift and go to state 15
    IDENTIFICADOR   shift and go to state 17

    cabecalho                      shift and go to state 16

state 8

    (8) inicializacao_variaveis -> atribuicao .

    INTEIRO         reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    FLUTUANTE       reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    IDENTIFICADOR   reduce using rule 8 (inicializacao_variaveis -> atribuicao .)
    $end            reduce using rule 8 (inicializacao_variaveis -> atribuicao .)


state 9

    (18) declaracao_funcao -> cabecalho .

    INTEIRO         reduce using rule 18 (declaracao_funcao -> cabecalho .)
    FLUTUANTE       reduce using rule 18 (declaracao_funcao -> cabecalho .)
    IDENTIFICADOR   reduce using rule 18 (declaracao_funcao -> cabecalho .)
    $end            reduce using rule 18 (declaracao_funcao -> cabecalho .)


state 10

    (15) tipo -> INTEIRO .

    DOIS_PONTOS     reduce using rule 15 (tipo -> INTEIRO .)
    IDENTIFICADOR   reduce using rule 15 (tipo -> INTEIRO .)


state 11

    (16) tipo -> FLUTUANTE .

    DOIS_PONTOS     reduce using rule 16 (tipo -> FLUTUANTE .)
    IDENTIFICADOR   reduce using rule 16 (tipo -> FLUTUANTE .)


state 12

    (38) atribuicao -> var . ATRIBUICAO expressao

    ATRIBUICAO      shift and go to state 18


state 13

    (19) cabecalho -> IDENTIFICADOR . ABRE_PAR lista_parametros FECHA_PAR corpo FIM
    (11) var -> IDENTIFICADOR .
    (12) var -> IDENTIFICADOR . indice
    (13) indice -> . indice ABRE_COL expressao FECHA_COL
    (14) indice -> . ABRE_COL expressao FECHA_COL

    ABRE_PAR        shift and go to state 19
    ATRIBUICAO      reduce using rule 11 (var -> IDENTIFICADOR .)
    ABRE_COL        shift and go to state 21

    indice                         shift and go to state 20

state 14

    (2) lista_declaracoes -> lista_declaracoes declaracao .

    INTEIRO         reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    FLUTUANTE       reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    IDENTIFICADOR   reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)
    $end            reduce using rule 2 (lista_declaracoes -> lista_declaracoes declaracao .)


state 15

    (7) declaracao_variaveis -> tipo DOIS_PONTOS . lista_variaveis
    (9) lista_variaveis -> . var VIRGULA lista_variaveis
    (10) lista_variaveis -> . var
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice

    IDENTIFICADOR   shift and go to state 24

    lista_variaveis                shift and go to state 22
    var                            shift and go to state 23

state 16

    (17) declaracao_funcao -> tipo cabecalho .

    INTEIRO         reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    FLUTUANTE       reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    IDENTIFICADOR   reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)
    $end            reduce using rule 17 (declaracao_funcao -> tipo cabecalho .)


state 17

    (19) cabecalho -> IDENTIFICADOR . ABRE_PAR lista_parametros FECHA_PAR corpo FIM

    ABRE_PAR        shift and go to state 19


state 18

    (38) atribuicao -> var ATRIBUICAO . expressao
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COL expressao FECHA_COL
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . IDENTIFICADOR ABRE_PAR lista_argumentos FECHA_PAR
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    IDENTIFICADOR   shift and go to state 32
    ABRE_COL        shift and go to state 35
    SOMA            shift and go to state 38
    SUBTRACAO       shift and go to state 39
    INTEIRO         shift and go to state 40
    FLUTUANTE       shift and go to state 41

    var                            shift and go to state 25
    expressao                      shift and go to state 26
    expressao_simples              shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_aditiva              shift and go to state 29
    expressao_multiplicativa       shift and go to state 30
    expressao_unaria               shift and go to state 31
    fator                          shift and go to state 33
    operador_soma                  shift and go to state 34
    chamada_funcao                 shift and go to state 36
    numero                         shift and go to state 37

state 19

    (19) cabecalho -> IDENTIFICADOR ABRE_PAR . lista_parametros FECHA_PAR corpo FIM
    (20) lista_parametros -> . lista_parametros VIRGULA lista_parametros
    (21) lista_parametros -> . parametro
    (22) lista_parametros -> . vazio
    (23) parametro -> . tipo DOIS_PONTOS IDENTIFICADOR
    (24) parametro -> . parametro ABRE_COL FECHA_COL
    (72) vazio -> .
    (15) tipo -> . INTEIRO
    (16) tipo -> . FLUTUANTE

    FECHA_PAR       reduce using rule 72 (vazio -> .)
    VIRGULA         reduce using rule 72 (vazio -> .)
    INTEIRO         shift and go to state 10
    FLUTUANTE       shift and go to state 11

    lista_parametros               shift and go to state 42
    parametro                      shift and go to state 43
    vazio                          shift and go to state 44
    tipo                           shift and go to state 45

state 20

    (12) var -> IDENTIFICADOR indice .
    (13) indice -> indice . ABRE_COL expressao FECHA_COL

  ! shift/reduce conflict for ABRE_COL resolved as shift
    ATRIBUICAO      reduce using rule 12 (var -> IDENTIFICADOR indice .)
    VIRGULA         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    INTEIRO         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FLUTUANTE       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    IDENTIFICADOR   reduce using rule 12 (var -> IDENTIFICADOR indice .)
    $end            reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FIM             reduce using rule 12 (var -> IDENTIFICADOR indice .)
    error           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SE              reduce using rule 12 (var -> IDENTIFICADOR indice .)
    REPITA          reduce using rule 12 (var -> IDENTIFICADOR indice .)
    LEIA            reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ESCREVA         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    RETORNA         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SOMA            reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SUBTRACAO       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ATE             reduce using rule 12 (var -> IDENTIFICADOR indice .)
    SENAO           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MULTIPLICACAO   reduce using rule 12 (var -> IDENTIFICADOR indice .)
    DIVISAO         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MENOR           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MAIOR           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    IGUALDADE       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MENOR_IGUAL     reduce using rule 12 (var -> IDENTIFICADOR indice .)
    MAIOR_IGUAL     reduce using rule 12 (var -> IDENTIFICADOR indice .)
    NEGACAO         reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FECHA_COL       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    FECHA_PAR       reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ENTAO           reduce using rule 12 (var -> IDENTIFICADOR indice .)
    ABRE_COL        shift and go to state 46

  ! ABRE_COL        [ reduce using rule 12 (var -> IDENTIFICADOR indice .) ]


state 21

    (14) indice -> ABRE_COL . expressao FECHA_COL
    (42) expressao -> . expressao_simples
    (43) expressao -> . atribuicao
    (44) expressao_simples -> . expressao_aditiva
    (45) expressao_simples -> . expressao_simples operador_relacional expressao_aditiva
    (38) atribuicao -> . var ATRIBUICAO expressao
    (46) expressao_aditiva -> . expressao_multiplicativa
    (47) expressao_aditiva -> . expressao_aditiva operador_multiplicacao expressao_unaria
    (11) var -> . IDENTIFICADOR
    (12) var -> . IDENTIFICADOR indice
    (48) expressao_multiplicativa -> . expressao_unaria
    (49) expressao_multiplicativa -> . expressao_multiplicativa operador_multiplicacao expressao_unaria
    (50) expressao_unaria -> . fator
    (51) expressao_unaria -> . operador_soma fator
    (62) fator -> . ABRE_COL expressao FECHA_COL
    (63) fator -> . var
    (64) fator -> . chamada_funcao
    (65) fator -> . numero
    (58) operador_soma -> . SOMA
    (59) operador_soma -> . SUBTRACAO
    (68) chamada_funcao -> . IDENTIFICADOR ABRE_PAR lista_argumentos FECHA_PAR
    (66) numero -> . INTEIRO
    (67) numero -> . FLUTUANTE

    IDENTIFICADOR   shift and go to state 32
    ABRE_COL        shift and go to state 35
    SOMA            shift and go to state 38
    SUBTRACAO       shift and go to state 39
    INTEIRO         shift and go to state 40
    FLUTUANTE       shift and go to state 41

    expressao                      shift and go to state 47
    expressao_simples              shift and go to state 27
    atribuicao                     shift and go to state 28
    expressao_aditiva              shift and go to state 29
    var                            shift and go to state 25
    expressao_multiplicativa       shift and go to state 30
    expressao_unaria               shift and go to state 31
    fator                          shift and go to state 33
    operador_soma                  shift and go to state 34
    chamada_funcao                 shift and go to state 36
    numero                         shift and go to state 37

state 22

    (7) declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .

    INTEIRO         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FLUTUANTE       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    IDENTIFICADOR   reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    $end            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    FIM             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    error           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SE              reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    REPITA          reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    LEIA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ESCREVA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    RETORNA         reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ABRE_COL        reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SOMA            reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SUBTRACAO       reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    ATE             reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)
    SENAO           reduce using rule 7 (declaracao_variaveis -> tipo DOIS_PONTOS lista_variaveis .)


state 23

    (9) lista_variaveis -> var . VIRGULA lista_variaveis
    (10) lista_variaveis -> var .
